--- a/index.html
+++ b/index.html
@@ -1,12 +1,325 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Charles Andrews</title>
+  <title>Portfolio Page</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Crete Round' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <main>
+    <header>
+      <a href="#" class="logo">My Logo</a>
+      <nav>
+        <div id="menu-btn">
+          <div class="menu-bar"></div>
+          <div class="menu-bar"></div>
+          <div class="menu-bar"></div>
+        </div>
+      </nav>
+      <nav class="desktop-nav">
+        <ul class="desktop-nav-content">
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#"><img src="images/Icon - Mail.png" alt="Mail icon" class="mail-icon"></a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="headline-section">
+      <h2>Hey There. I'm Charles.</h2>
+      <div id="introduction-text">I'm a Software Developer</div>
+      <p id="brief-description" class="healine-desc">
+        I can help you build a product , feature or website. Look through some of my work and experience! If you like
+        what you see and have a project you need coded,
+        don’t hesitate to contact me.
+      </p>
+      <div class="social-media">
+        <ul id="contact">
+          <li>
+            <a href="#">
+              <img src="images/github-icon.png" alt="github-icon" width="19.99px" height="20px">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="contact-mode">
+                <div class="linkedIn">
+                  <div id="linkedIn-i-o">
+                    <img src="images/linkedIn_dot.png" alt="linkedIn-I" width="4.97px" height="4.97px">
+                    <img src="images/linkedIn_i.png" alt="linkedIn-I" width="4.97px" height="13.72px">
+                  </div>
+                  <img src="images/linkedIn_n.png" alt="linkedIn-N" width="12.71px" height="16.97px">
+                </div>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="images/angellist.png" alt="angellist" width="14.97px" height="20px">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="images/twitter.png" alt="twitter-icon" width="19.99px" height="19.96px">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="images/medium-icon.png" alt="medium-icon" width="20px" height="16px">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <img class="right-side-image" src="images/Group.png" alt="right-design">
+      <img src="images/Desktop-healine-image.png" alt="Desktop headline right side image" class="desktop-healine-image">
+    </section>
+
+    
+    <section id="works-section">
+      <div class="works-title-block">
+        <h3 class="title">My Recent Works</h3>
+        <div class="divider-desktop">
+          <img class="desktop-divider" src="images/desktop-divider.png" alt="desktop divider">
+        </div>
+      </div>
+      <div class="crossline"><img src="images/Vector (2).png" alt="crossline"></div>
+      <div class="works-card">
+        <div class="yoga-placeholder"><img src="images/Img Placeholder.png" alt="yoga-placeholder"></div>
+        <h3 id="bold-text">Multi-Post Stories</h3>
+        <p id="works-description">A daily selection of privately personalized reads; no accounts or sign-ups required.
+          has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard
+          dummy text.</p>
+        <ul id="competencies">
+          <li>CSS</li>
+          <li>HTML</li>
+          <li>JAVASCRIPT</li>
+        </ul>
+        <button type="button" class="btn-type-a">See project</button>
+      </div>
+      <div class="works-card-desktop">
+        <img src="images/Img Placeholder.png" alt="yoga-placeholder" class="project-cards">
+        <div class="side-text">
+          <h3 id="bold-text">Multi-Post Stories</h3>
+          <p id="works-description">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+          <ul id="competencies">
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="btn-type-a">See project</button>
+        </div>
+      </div>
+      <div class="grid-container">
+        <div class="grid-item">
+          <img src="images/Img Placeholder (1).png" alt="place holder image 2" class="project-cards-mobile">
+          <img src="images/Img Placeholder (2).png" alt="place holder image 2" class="project-cards">
+          <div><button type="button" class="btn-type-b">See project</button></div>
+        </div>
+        <div class="grid-item">
+          <img src="images/Img Placeholder (1).png" alt="place holder image 2" class="project-cards-mobile">
+          <img src="images/Img Placeholder (3).png" alt="place holder image 3" class="project-cards">
+          <div class="image-text">
+            <div>
+              <h3 class="bold-text">Profesional Art Printing Data</h3>
+            </div>
+            <p class="works-description">A daily selection of privately personalized reads; no accounts or sign-ups
+              required. Has been the industry's standard.</p>
+            <ul class="competencies">
+              <li>CSS</li>
+              <li>HTML</li>
+              <li>JAVASCRIPT</li>
+            </ul>
+          </div>
+          <div><button type="button" class="btn-type-b">See project</button></div>
+        </div>
+        <div class="grid-item">
+          <img src="images/Img Placeholder (1).png" alt="place holder image 2" class="project-cards-mobile">
+          <img src="images/Img Placeholder (4).png" alt="place holder image 2" class="project-cards">
+          <div class="image-text">
+            <div>
+              <h3 class="bold-text">Profesional Art Printing Data</h3>
+            </div>
+            <p class="works-description">A daily selection of privately personalized reads; no accounts or sign-ups
+              required. Has been the industry's standard.</p>
+            <ul class="competencies">
+              <li>CSS</li>
+              <li>HTML</li>
+              <li>JAVASCRIPT</li>
+            </ul>
+          </div>
+          <div><button type="button" class="btn-type-b">See project</button></div>
+        </div>
+        <div class="grid-item">
+          <img src="images/Img Placeholder (1).png" alt="place holder image 2" class="project-cards-mobile">
+          <img src="images/Img Placeholder (1).png" alt="place holder image 2" class="project-cards">
+          <div class="image-text">
+            <div>
+              <h3 class="bold-text">Profesional Art Printing Data</h3>
+            </div>
+            <p class="works-description">A daily selection of privately personalized reads; no accounts or sign-ups
+              required. Has been the industry's standard.</p>
+            <ul class="competencies">
+              <li>CSS</li>
+              <li>HTML</li>
+              <li>JAVASCRIPT</li>
+            </ul>
+          </div>
+          <div><button type="button" class="btn-type-b">See project</button></div>
+        </div>
+        <div class="grid-item">
+          <img src="images/Img Placeholder (1).png" alt="place holder image 2" class="project-cards-mobile">
+          <img src="images/Img Placeholder (3).png" alt="place holder image 3" class="project-cards">
+          <div class="image-text">
+            <div>
+              <h3 class="bold-text">Profesional Art Printing Data</h3>
+            </div>
+            <p class="works-description">A daily selection of privately personalized reads; no accounts or sign-ups
+              required. Has been the industry's standard.</p>
+            <ul class="competencies">
+              <li>CSS</li>
+              <li>HTML</li>
+              <li>JAVASCRIPT</li>
+            </ul>
+          </div>
+          <div><button type="button" class="btn-type-b">See project</button></div>
+        </div>
+        <div class="grid-item">
+          <img src="images/Img Placeholder (1).png" alt="place holder image 2" class="project-cards-mobile">
+          <img src="images/Img Placeholder (4).png" alt="place holder image 2" class="project-cards">
+          <div class="image-text">
+            <div>
+              <h3 class="bold-text">Profesional Art Printing Data</h3>
+            </div>
+            <p class="works-description">A daily selection of privately personalized reads; no accounts or sign-ups
+              required. Has been the industry's standard.</p>
+            <ul class="competencies">
+              <li>CSS</li>
+              <li>HTML</li>
+              <li>JAVASCRIPT</li>
+            </ul>
+          </div>
+          <div><button type="button" class="btn-type-b">See project</button></div>
+        </div>
+      </div>
+    </section>
+    <section class="about-me-section">
+      <h2 class="about-me-title">About me</h2>
+      <div>
+        <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my
+          work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+        </p>
+      </div>
+      <div><button type="button" class="about-me-btn">Get my resume</button></div>
+      <img class="right-side-image-b" src="images/illustration-about-me-mobile.png" alt="right-design about-me section">
+      <img class="right-side-image-b-desktop" src="images/about-image-desktop.png" alt="desktop image">
+      <img class="hor-line" src="images/Devider.png" alt="horizental line">
+      <div class="thematic-break"></div>
+      <div class="list-container">
+        <ul class="about-me-cat">
+          <li class="language">
+            Languages
+            <div class="category-list-container">
+              <div class="category-list">Javascript</div>
+              <div class="category-list">Ruby</div>
+              <div class="category-list">CSS</div>
+              <div class="category-list">HTML</div>
+            </div>
+          </li>
+          <li class="frameworks">
+            Frameworks
+            <div class="category-list-container">
+              <div class="category-list">React.js</div>
+              <div class="category-list">Ruby on Rails</div>
+              <div class="category-list">RSpec</div>
+              <div class="category-list">Capybara</div>
+              <div class="category-list">Selenium</div>
+            </div>
+          </li>
+          <li class="skills">
+            Skills
+            <div class="category-list-container">
+              <div class="category-list">Database Management</div>
+              <div class="category-list">Version Control</div>
+              <div class="category-list">CLI</div>
+              <div class="category-list">API Design</div>
+              <div class="category-list">Web Development</div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="reg-form">
+      <div class="form-body">
+        <div class="header-text">
+          <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+        </div>
+        <form action="https://formspree.io/f/xknaqwwd" method="post">
+          <input type="text" class="text-field" placeholder="Full name" min="1" max="30" name="Name" required>
+          <input type="email" class="text-field" placeholder="Email address" name="Email address" required>
+          <textarea name="Bio" id="bio" class="text-field" cols="30" rows="5" minlength="1" maxlength="500" placeholder="Write me something" required></textarea>
+          <div class="form-btn">
+              <button type="submit" class="about-me-btn">Get in touch</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <section class="form-desktop">
+      <p class="form-text">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+      <form class="main-form" action="https://formspree.io/f/xknaqwwd" method="post">
+        <input type="text" class="text-field" placeholder="Full name" min="1" max="30" name="Name" required>
+        <input type="email" class="text-field" placeholder="Email address" name="Email address" required>
+        <textarea name="Bio" id="bio" class="text-field" cols="30" rows="5" minlength="1" maxlength="500" placeholder="Write me something" required></textarea>
+        <div class="form-btn">
+            <button type="submit" class="about-me-btn">Get in touch</button>
+        </div>
+      </form>
+    </section>
+    <footer class="form-contacts">
+      <ul id="footer-contact">
+        <li>
+          <a href="#">
+            <img src="images/git-icon.png" alt="github-icon" width="19.99px" height="20px">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="contact-mode">
+              <div class="linkedIn">
+                <div id="linkedIn-i-o">
+                  <img src="images/LI(dot).png" alt="linkedIn-I" width="4.97px" height="4.97px">
+                  <img src="images/LI(i).png" alt="linkedIn-I" width="4.97px" height="13.72px">
+                </div>
+                <img src="images/LI(n).png" alt="linkedIn-N" width="12.71px" height="16.97px">
+              </div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="images/angellist-icon.png" alt="angellist" width="14.97px" height="20px">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="images/twitter-icon.png" alt="twitter-icon" width="19.99px" height="19.96px">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="images/Black-medium-icon.png" alt="medium-icon" width="20px" height="16px">
+          </a>
+        </li>
+      </ul>
+    </footer>
+    <div class="footer-divider"><div></div></div> 
+  </main>
 </body>
 </html>
